--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npm run devserver\" \"npm run devclient\"",
     "devserver": "nodemon src/index.js",
     "devclient": "cd client && npm start",
-    "start": "node src/index.js",
+    "start": "ENV=PROD node src/index.js",
+    "local": "node src/index.js",
     "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "keywords": [],
